# serde-poly

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yaml
examples/: json_serialized.rs
serde-poly-macro/: Cargo.toml
serde-poly-macro/src/: expand_ownable_poly.rs  expand_poly.rs  lib.rs
src/: impl_ownable_poly.rs  impl_poly.rs  impls.rs  lib.rs
tests/: derive.rs  derive_ownable_poly.rs
