[package]
name = "serde-poly"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = [] }
serde-poly-macro = { path = "./serde-poly-macro" }
uuid = { version = "1.18", optional = true }

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
